--- a/client/src/App.css
+++ b/client/src/App.css
@@ -37,9 +37,9 @@
   }
 } */
 
-body{
-	max-width:850px;
-	margin:auto;
+body {
+  max-width: 850px;
+  margin: auto;
 }
 
 button {
@@ -97,10 +97,9 @@ table td {
   }
 
   table tr {
-    border-bottom:3px solid #ddd;
+    border-bottom: 3px solid #ddd;
     display: block;
     margin-bottom: 0.625em;
-	
   }
 
   table td {
@@ -108,11 +107,9 @@ table td {
     display: block;
     font-size: 0.8em;
     text-align: right;
-	
   }
 
   table td::before {
- 
     float: left;
     content: attr(data-label);
     font-weight: bold;
@@ -120,9 +117,12 @@ table td {
   table td:last-child {
     border-bottom: 0;
   }
-  
+
   table td:first-child {
     border-top: 0;
   }
-  
+}
+
+.submit-cancel-btn .btn {
+  margin-right: 10px;
 }
